MAKE = make 

if USING__Analysis
ANAEXTRADIR=AddOns
endif

SUBDIRS       = \
		ATOOLS \
		HELICITIES \
		BEAM \
		PDF \
		MODEL \
		PHASIC++ \
		EXTRA_XS \
		AMEGIC++ \
		COMIX \
		APACIC++ \
		CSSHOWER++ \
		AMISIC++ \
		AHADIC++ \
		HADRONS++ \
		PHOTONS++ \
		SHERPA \
		Manual \
		Examples \
		$(ANAEXTRADIR) \
		TOOLS

EXTRA_DIST = @SVNINCLUDE@ GUIDELINES
