MAKE = make 

SUBDIRS       = \
		ATOOLS \
		HELICITIES \
		BEAM \
		PDF \
		MODEL \
		PHASIC++ \
		EXTRA_XS \
		AMEGIC++ \
		COMIX \
		APACIC++ \
		CSSHOWER++ \
		AMISIC++ \
		AHADIC++ \
		HADRONS++ \
		PHOTONS++ \
		AddOns \
		SHERPA \
		Manual \
		Examples \
		TOOLS

EXTRA_DIST = @SVNINCLUDE@ GUIDELINES
