dnl Process this file with autoconf to produce a configure script.

AC_INIT(SHERPA MC, 1.4.0, support@sherpa-mc.de, SHERPA-MC)
AC_CONFIG_MACRO_DIR([m4])
AM_CONFIG_HEADERS(config.h ATOOLS/Org/CXXFLAGS.H ATOOLS/Org/CXXFLAGS_PACKAGES.H)
AM_INIT_AUTOMAKE(tar-ustar)
AM_DISABLE_STATIC
AC_PREFIX_DEFAULT(${PWD})
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_CANONICAL_BUILD
SHERPA_SETUP_BUILDSYSTEM
dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_CC

AC_PROG_FC(gfortran g95 g77)
AC_FC_LIBRARY_LDFLAGS
AC_FC_WRAPPERS
## Hack to make libtool use the FC Fortran compiler via F77, since
## libtool < 2.x doesn't understand --tag=FC
F77=$FC
AM_FFLAGS=$AM_FCFLAGS
AC_SUBST(F77)
AC_SUBST(AM_FFLAGS)

AC_ARG_ENABLE(mpi,
  AC_HELP_STRING([--enable-mpi], [Enable MPI]),
  [ AC_MSG_CHECKING(for MPI)
    case "${enableval}" in
      no)  AC_MSG_RESULT(no); mpi=false ;;
      yes) AC_MSG_RESULT(yes); mpi=true ;;
    esac ],
  [ AC_MSG_CHECKING(for MPI); AC_MSG_RESULT(no); mpi=false ])
if test "$mpi" = "true"; then
  AC_DEFINE([USING__MPI], "1", [using MPI])
  AX_PROG_CXX_MPI([test "$mpi" = "true"], [use_mpi=yes],
    [AC_MSG_FAILURE([MPI compiler not found.])])
else
  AC_PROG_CXX
fi
AM_CONDITIONAL(USING__MPI, test "$mpi" = "true" )

CXX="$CXX -Wl,--no-as-needed"

AM_PROG_LIBTOOL
dnl Checks for header files.
AC_HEADER_STDC
dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir)

SHERPA_SETUP_CONFIGURE_OPTIONS

SHERPA_SETUP_VARIABLES

AC_OUTPUT(ATOOLS/Math/Makefile \
	  ATOOLS/Phys/Makefile \
	  ATOOLS/Org/Makefile \
	  ATOOLS/Makefile \
          METOOLS/Explicit/Makefile \
          METOOLS/Currents/Makefile \
          METOOLS/Vertices/Makefile \
          METOOLS/Colors/Makefile \
          METOOLS/SpinCorrelations/Makefile \
          METOOLS/Main/Makefile \
          METOOLS/Loops/Makefile \
          METOOLS/Makefile \
	  BEAM/Main/Makefile \
	  BEAM/Makefile \
	  PDF/Main/Makefile \
	  PDF/Electron/Makefile \
	  PDF/LHAPDF/Makefile \
	  PDF/MSTW/Makefile \
	  PDF/MRST/Makefile \
	  PDF/CTEQ/Makefile \
	  PDF/GRV/Makefile \
	  PDF/Remnant/Makefile \
	  PDF/Makefile \
	  MODEL/Interaction_Models/Makefile \
	  MODEL/Main/Makefile \
	  MODEL/Makefile \
	  MCATNLO/Tools/Makefile \
	  MCATNLO/Calculators/Makefile \
	  MCATNLO/Showers/Makefile \
	  MCATNLO/Main/Makefile \
	  MCATNLO/Makefile \
	  POWHEG/Tools/Makefile \
	  POWHEG/Calculators/Makefile \
	  POWHEG/Showers/Makefile \
	  POWHEG/Main/Makefile \
	  POWHEG/Makefile \
	  PHASIC++/Main/Makefile \
	  PHASIC++/Channels/Makefile \
	  PHASIC++/Process/Makefile \
	  PHASIC++/Selectors/Makefile \
	  PHASIC++/Scales/Makefile \
	  PHASIC++/Enhance/Makefile \
	  PHASIC++/Decays/Makefile \
	  PHASIC++/Makefile \
	  EXTRA_XS/Main/Makefile \
	  EXTRA_XS/Two2Two/Makefile \
	  EXTRA_XS/NLO/Makefile \
	  EXTRA_XS/Cluster/Makefile \
          EXTRA_XS/One2Two/Makefile \
	  EXTRA_XS/One2Three/Makefile \
	  EXTRA_XS/Makefile \
	  AMEGIC++/Main/Makefile \
          AMEGIC++/Main/makelibs \
	  AMEGIC++/DipoleSubtraction/Makefile \
          AMEGIC++/Amplitude/Makefile \
          AMEGIC++/Amplitude/Zfunctions/Makefile \
          AMEGIC++/Phasespace/Makefile \
          AMEGIC++/String/Makefile \
          AMEGIC++/Cluster/Makefile \
          AMEGIC++/Makefile \
	  COMIX/Amplitude/Makefile \
	  COMIX/Phasespace/Makefile \
	  COMIX/Main/Makefile \
	  COMIX/Cluster/Makefile \
	  COMIX/Makefile \
	  CSSHOWER++/Tools/Makefile \
	  CSSHOWER++/Calculators/Makefile \
	  CSSHOWER++/Showers/Makefile \
	  CSSHOWER++/Main/Makefile \
	  CSSHOWER++/Makefile \
	  AMISIC++/Tools/Makefile \
	  AMISIC++/Model/Makefile \
	  AMISIC++/Main/Makefile \
	  AMISIC++/Makefile \
	  AHADIC++/Tools/Makefile \
	  AHADIC++/Formation/Makefile \
	  AHADIC++/Decays/Makefile \
	  AHADIC++/Main/Makefile \
	  AHADIC++/Makefile \
	  HADRONS++/Main/Makefile \
	  HADRONS++/ME_Library/Makefile \
	  HADRONS++/Current_Library/Makefile \
	  HADRONS++/PS_Library/Makefile \
	  HADRONS++/Run/Makefile \
	  HADRONS++/Makefile \
	  PHOTONS++/Main/Makefile \
          PHOTONS++/Tools/Makefile \
          PHOTONS++/PhaseSpace/Makefile \
          PHOTONS++/MEs/Makefile \
	  PHOTONS++/Makefile \
	  SHERPA/Tools/Makefile \
	  SHERPA/LundTools/Makefile \
	  SHERPA/LundTools/pythia-6.4.18.f \
	  SHERPA/Initialization/Makefile \
	  SHERPA/PerturbativePhysics/Makefile \
	  SHERPA/SoftPhysics/Makefile \
	  SHERPA/Single_Events/Makefile \
	  SHERPA/Main/Makefile \
	  SHERPA/Run/Makefile \
          SHERPA/Run/Sherpa-config \
	  SHERPA/Makefile \
	  Manual/Makefile \
          Manual/sherpa-completion \
	  Examples/Makefile \
	  AddOns/Analysis/Tools/Makefile \
	  AddOns/Analysis/Main/Makefile \
	  AddOns/Analysis/Triggers/Makefile \
	  AddOns/Analysis/Observables/Makefile \
	  AddOns/Analysis/Analyses/Makefile \
	  AddOns/Analysis/Scripts/Makefile \
	  AddOns/Analysis/Makefile \
	  AddOns/BlackHat/Makefile \
          AddOns/MCFM/Makefile \
          AddOns/LH_OLE/Makefile \
	  AddOns/Phox/Makefile \
	  AddOns/HZTool/Makefile \
	  AddOns/PGS/Makefile \
	  AddOns/Rivet/Makefile \
	  AddOns/Makefile \
	  Makefile )

if test "x$VERSIONING" != "x"; then
  mv "SHERPA/Run/Sherpa-config" "SHERPA/Run/Sherpa$VERSIONING-config"
fi
