dnl Process this file with autoconf to produce a configure script.
AC_INIT
AM_INIT_AUTOMAKE(ADICIC++,0.0)
AM_DISABLE_STATIC
AC_PREFIX_DEFAULT(${PWD}/..)

dnl Conditional compiling and linking
AC_ARG_ENABLE(cvsinclude,
[  --disable-cvsinclude    Disable CVS Synchronization ],
[ cvsinclude=true
  case "${enableval}" in
    no) echo "enable CVS synchronization... no" ;
        cvsinclude=false ;;
    yes) echo "enable CVS synchronization... yes" ;;
    *) echo "enable CVS synchronization... yes" ;;
  esac ],
[ echo "enable CVS synchronization... yes" ;
  cvsinclude=true ])
AM_CONDITIONAL(CVS_INCLUDE, test "$cvsinclude" = "true" )
ROOT_PATH(, have_root=yes, have_root=no)
AC_ARG_ENABLE(root,
[  --enable-root           Enable ROOT support ],
[ AC_MSG_CHECKING(whether to enable ROOT support)
  if test "$have_root" = "yes"; then
    case "${enableval}" in
      yes) AC_MSG_RESULT(yes); root=true ;;
      no)  AC_MSG_RESULT(no); root=false;;
    esac
  else 
		case "${enableval}" in
      yes) AC_MSG_RESULT(not possible);
           AC_MSG_ERROR([ROOT not found on your system, cannot compile ROOT support. If ROOT is installed, please provide the installation path using e.g. --with-rootsys=/usr/local/]); root=false;;
      no)  AC_MSG_RESULT(no); root=false;;
		esac
  fi ],[ root=false ])
AM_CONDITIONAL(ROOT_SUPPORT, test $root = true)

AC_ARG_ENABLE(hdecay,
[  --enable-hdecay         Enable HDECAY support ],
[ AC_MSG_CHECKING(whether to enable HDECAY support);AC_MSG_RESULT(${enableval});
	case "${enableval}" in
		yes) hdecay=true ;;
		no)  hdecay=false;;
	esac ],[ hdecay=false ])
AM_CONDITIONAL(HDECAY_SUPPORT, test $hdecay = true)

AC_ARG_ENABLE(isajet,
[  --enable-isajet         Enable ISAJET support ],
[ AC_MSG_CHECKING(whether to enable ISAJET support);AC_MSG_RESULT(${enableval});
	case "${enableval}" in
		yes) isajet=true ;;
		no)  isajet=false;;
	esac ],[ isajet=false ])
AM_CONDITIONAL(ISAJET_SUPPORT, test $isajet = true)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_CXX
AC_PROG_CC
#AC_PROG_F77
AM_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir)

AC_OUTPUT(Tool/Makefile \
	  Tool/savemaketool/Makefile \
	  Input/Makefile \
	  Structure/Makefile \
	  Handler/Makefile \
	  Main/Makefile \
	  TestIt/Makefile \
	  TestIt/data/Makefile \
	  RunIt/Makefile \
          Makefile)

