dnl Process this file with autoconf to produce a configure script.
AC_INIT
AM_INIT_AUTOMAKE(AMEGIC++, 2.0)
AM_DISABLE_STATIC
AC_PREFIX_DEFAULT(${PWD}/..)

dnl Conditional compiling and linking
AC_ARG_ENABLE(cvsinclude,
[  --disable-cvsinclude    Disable CVS Synchronization ],
[ cvsinclude=true
  case "${enableval}" in
    no) echo "enable CVS synchronization... no" ;
        cvsinclude=false ;;
    yes) echo "enable CVS synchronization... yes" ;;
    *) echo "enable CVS synchronization... yes" ;;
  esac ],
[ echo "enable CVS synchronization... yes" ;
  cvsinclude=true ])
AM_CONDITIONAL(CVS_INCLUDE, test "$cvsinclude" = "true" )
AC_ARG_ENABLE(root,
[  --enable-root           Enable ROOT support ],
[ root=false
  if test -d "$ROOTSYS"; then
    echo "checking for ROOT libraries... yes"
    case "${enableval}" in 
      yes) root=true ;;
    esac
  else 
    echo "checking for ROOT libraries... no"
    case "${enableval}" in 
      yes) AC_MSG_ERROR(\$ROOTSYS is not a valid path.) ;;
    esac
  fi ],[ root=false ])
AM_CONDITIONAL(ROOT_SUPPORT, test $root = true)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_CXX
AC_PROG_CC
AC_PROG_F77
AM_PROG_LIBTOOL

dnl Checks for libraries.
dnl Replace `main' with a function in -lAmegic:
AC_CHECK_LIB(Amegic, main)
dnl Replace `main' with a function in -lAmplitude:
AC_CHECK_LIB(Amplitude, main)
dnl Replace `main' with a function in -lModel:
AC_CHECK_LIB(Model, main)
dnl Replace `main' with a function in -lString:
AC_CHECK_LIB(String, main)
dnl Replace `main' with a function in -lZfunctions:
AC_CHECK_LIB(Zfunctions, main)
dnl Replace `main' with a function in -lTools:
AC_CHECK_LIB(Tools, main)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir)

AC_OUTPUT(Main/Makefile \
	  Amplitude/Makefile \
          Amplitude/AmplTools/Makefile \
	  Amplitude/Zfunctions/Makefile \
	  Phasespace/Makefile \
	  String/Makefile \
	  Model/Makefile \
	  Makefile )










