dnl Process this file with autoconf to produce a configure script.
AC_INIT(Run/Apacic.C)
AM_INIT_AUTOMAKE(APACIC++, 2.0)
AM_DISABLE_STATIC
AC_PREFIX_DEFAULT(${PWD}/..)
dnl AC_TOP_SRCDIR_DEFAULT(${PWD}/..)
dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_CXX
AC_PROG_CC
AC_PROG_F77
AM_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir)


AC_OUTPUT(Main/Makefile \
          Showers/Makefile \
	  Hard_Processes/Makefile \
          Hard_Interface/Makefile \
          Run/Makefile \
	  Makefile )




