dnl Process this file with autoconf to produce a configure script.
AC_INIT
AM_INIT_AUTOMAKE(ATOOLS, 2.0)
AM_DISABLE_STATIC
AC_PREFIX_DEFAULT(${PWD}/..)
dnl AC_TOP_SRCDIR_DEFAULT(${PWD}/..)

dnl Conditional compiling and linking
AC_ARG_ENABLE(cvsinclude,
[  --disable-cvsinclude    Disable CVS Synchronization ],
[ cvsinclude=true
  case "${enableval}" in
    no) echo "enable CVS synchronization... no" ;
        cvsinclude=false ;;
    yes) echo "enable CVS synchronization... yes" ;;
    *) echo "enable CVS synchronization... yes" ;;
  esac ],
[ echo "enable CVS synchronization... yes" ;
  cvsinclude=true ])
AM_CONDITIONAL(CVS_INCLUDE, test "$cvsinclude" = "true" )
ROOT_PATH(, have_root=yes, have_root=no)
AC_ARG_ENABLE(root,
[  --enable-root           Enable ROOT support ],
[ AC_MSG_CHECKING(whether to enable ROOT support)
  if test "$have_root" = "yes"; then
    case "${enableval}" in
      yes) AC_MSG_RESULT(yes); root=true ;;
      no)  AC_MSG_RESULT(no); root=false;;
    esac
  else 
		case "${enableval}" in
      yes) AC_MSG_RESULT(not possible);
           AC_MSG_ERROR([ROOT not found on your system, cannot compile ROOT support. If ROOT is installed, please provide the installation path using e.g. --with-rootsys=/usr/local/]); root=false;;
      no)  AC_MSG_RESULT(no); root=false;;
		esac
  fi ],[ root=false ])
AM_CONDITIONAL(ROOT_SUPPORT, test $root = true)
AC_ARG_ENABLE(modelinclude,
[  --disable-modelinclude  Disable inclusion of MODEL headers ],
[ modelinclude=true
  MODELDIR="../MODEL-1.0"
  if test -d $MODELDIR ; then
    echo "checking for MODEL package... yes"
    case "${enableval}" in
      no) echo "disable MODEL include anyway... yes";
          modelinclude=false ;;
    esac
  else
    echo "checking for MODEL package... no"
    modelinclude=false
  fi ],
[ MODELDIR="../MODEL-1.0"
  if test ! -d $MODELDIR ; then
    echo "configure: warning: $MODELDIR is not a valid path."
    modelinclude=false
  else 
    echo "checking for MODEL package... yes"
    modelinclude=true 
  fi ])
AM_CONDITIONAL(MODEL_INCLUDE, test "$modelinclude" = "true" )

AC_CONFIG_COMMANDS_POST([touch Org/My_Root.C])

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_CXX
AC_PROG_CC
AM_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir)


AC_OUTPUT(Math/Makefile \
	  Phys/Makefile \
	  Org/Makefile \
	  Run/Makefile \
	  Makefile )

