SUBDIRS       =	\
		Python \
		Analysis \
		BlackHat \
		MCFM \
		LH_OLE \
		HZTool \
		OpenLoops \
		PGS \
		Rivet \
		HepMC \
		Root

nobase_dist_pkgdata_DATA = ExampleModel/Interaction_Model_SM_Zprime.C \
			ExampleModel/SM_Zprime.C \
			ExampleModel/Run.dat \
			ExampleModel/Makefile \
			HEPEVTInterface/HEPEVT_Interface.C \
			HEPEVTInterface/Makefile

