SUBDIRS       =	\
		NNLO \
		Python \
		Analysis \
		Pythia \
		Higgs \
		BlackHat \
		MCFM \
		LH_OLE \
		HZTool \
		OpenLoops \
		Recola \
		GoSam \
		PGS \
		Delphes \
		Rivet \
		HepMC \
		Root \
		Weights \
		DiHiggsNLO

nobase_dist_pkgdata_DATA = \
			HEPEVT/HEPEVT_Interface.C \
			HEPEVT/Makefile

EXTRA_DIST =  Dir2Db  Db2Dir
