SUBDIRS       =	\
		NNLO \
		Python \
		Analysis \
		Pythia \
		Higgs \
		BlackHat \
		LH_OLE \
		HZTool \
		OpenLoops \
		GoSam \
		MadLoop \
		MCFM \
		PGS \
		Delphes \
		Rivet \
		HepMC \
		Root \
		Weights \
		DiHiggsNLO \
		EWSudakov 

nobase_dist_pkgdata_DATA = \
			HEPEVT/HEPEVT_Interface.C \
			HEPEVT/Makefile

EXTRA_DIST =  Dir2Db  Db2Dir dat2yaml.py
