dnl Process this file with autoconf to produce a configure script.
AC_INIT
AM_INIT_AUTOMAKE(CS_SHOWER++, 0.0)
AM_DISABLE_STATIC
AC_PREFIX_DEFAULT(${PWD}/..)

dnl Conditional compiling and linking
AC_ARG_ENABLE(css,
[  --enable-css        Enable CS-Shower support ],
[ css=false
  case "${enableval}" in 
    yes) css=true && echo "checking for CSS support... yes" ;;
    *) echo "checking for CSS support... no" ;;
  esac ],[ ahadic=false ])
AM_CONDITIONAL(CSS_SUPPORT, test $css = true)


dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_CXX
AC_PROG_CC
AC_PROG_F77
AM_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir)


AC_OUTPUT(Tools/Makefile \
	  Showers/Makefile \
	  Main/Makefile \
	  Makefile )




